--- a/LebesgueNullmengen.tex
+++ b/LebesgueNullmengen.tex
@@ -1,6 +1,6 @@
 \subsection{Lebesgue-Nullmengen}
-Ein n-dimensionaler Quader $Q \subset \mathbb{R}^n$ ist ein karthesisches Produkt $Q = ]a_1,b_1[ \times ]a_2,b_2[ \times ... \times ]a_n,b_n[$ offener Intervalle mit $a_i,b_i \in \mathbb{R}$ und $a_i \leq b_i (i=1,...,n)$. Insbesondere ist damit $Q = \emptyset$ ein Quader.
-\[ \mu(Q)\coloneqq (b_1 - a_1)(b_2 - a_2)...(b_n - a_n)\, \text{nennen wir das Maß von $Q$}\]
+Ein n-dimensionaler Quader $Q \subset \mathbb{R}^n$ im $\mathbb{R}^n$ ist ein karthesisches Produkt $Q = ]a_1,b_1[ \times ]a_2,b_2[ \times ... \times ]a_n,b_n[$ offener Intervalle mit $a_i,b_i \in \mathbb{R}$ und $a_i \leq b_i (i=1,...,n)$. Insbesondere ist damit $Q = \emptyset$ ein Quader.
+\[ \mu(Q)\coloneqq (b_1 - a_1)(b_2 - a_2)...(b_n - a_n)\] nennen wir das Maß von $Q$
 
 Ist $M = Q_1 \dot\cup Q_2 \dot{\cup} ... \dot{\cup Q_k}$ die disjunkte Vereinigung n-dimensionaler Quader $Q_i$ $(i=1,2,...k)$, dann definieren wir $\mu(M)\coloneqq \sum_{i=1}^{k} \mu(Q_i)$
 
