--- a/WiederholungRiemann.tex
+++ b/WiederholungRiemann.tex
@@ -10,26 +10,26 @@ Diesen Integralsbegriff werden wir zu den Lebesgue-Integralen erweitern.\\
 Dazu zwei Beispiele:\\
 \\
 Dirichletsche Sprungfunktion:\\
-\begin{matrix}
-		$f\colon [a,b]$ & $\to$ & $\mathbb{R}$\\
-		$x$ & $\mapsto$ & $\left \{
+$\begin{matrix}
+		f\colon [a,b] & \to & \mathbb{R}\\
+		x & \mapsto & \left \{
 		\begin{matrix}
 			1 & x \text{ rational}\\
 			0 & \text{sonst}
 		\end{matrix}
-		\right .$
-\end{matrix}\\
+		\right .
+\end{matrix}$\\
 $U = [0,1]$ ist keine Nullmenge, also $f$ nicht Riemann-integrierbar.\\
 
 Die Thomae-Funktion:\\
-\begin{matrix}
-	$f\colon [0,1]$ & $\to$ & $\mathbb{R}$\\
-	$x$ & $\mapsto$ & $\left \{
+$\begin{matrix}
+	f\colon [0,1] & \to & \mathbb{R}\\
+	x & \mapsto & \left \{
 	\begin{matrix}
 		\frac{1}{q} & x = \frac{p}{q} \, p,q \in \mathbb{N}, ggT(p,q)=1\\
 		0 & x \in \mathbb{Q}
 	\end{matrix}
-	\right .$
-\end{matrix}\\
+	\right .
+\end{matrix}$\\
 Hier gilt: $U = [0,1] \cap \mathbb{Q}$
 
