Ich hab mal ein Makro für Integrale zugefügt, muss evtl noch abgeändert werden und muss nochmal gucken ob man das irgendwie sinnvoll beim Bestehenden abändern kann. Designtechnisch muss ich mir auchnoch was überlegen wie man nen Abbildungspfeil mit Text drüber machen kann.

--- a/Ana3Einleitung.tex
+++ b/Ana3Einleitung.tex
@@ -15,11 +15,12 @@
 \usepackage{stmaryrd}
 
 \newcommand{\RM}[1]{\MakeUppercase{\romannumeral #1{.}}}
+\newcommand{\integ}[2]{\int_#1 #2 \text{d}x}
 
 \begin{document}
 \title{Analysis $\RM{3}$}
 
-%\input{Einfuehrung}
+\input{Einfuehrung}
 
 \newpage
 
