--- a/WiederholungMengen.tex
+++ b/WiederholungMengen.tex
@@ -10,8 +10,8 @@
 \begin{itemize}[noitemsep]
 	\item $\mathbb{N}$ ist abzählbar (unendlich)
 	\item $\mathbb{Z}$ ist abzählbar (unendlich)
-	\item $\mathbb{Q}$ ist abzählbar (unenedlich)
-	\item Sind $A = \{a_1, a_2, ...\}$ und $B = \{b_1, b_2, ...\}$ abzählbar uneendlich, so auch \mbox{$A \cup B = \{a_1, b_1, a_2, b_2, ...\}$}
+	\item $\mathbb{Q}$ ist abzählbar (unendlich)
+	\item Sind $A = \{a_1, a_2, ...\}$ und $B = \{b_1, b_2, ...\}$ abzählbar unendlich, so auch \mbox{$A \cup B = \{a_1, b_1, a_2, b_2, ...\}$}
 	\item Falls $A \subset B$ und $A$ überabzählbar, so ist auch $B$ überabzählbar.
 	\item $a\le b \Rightarrow [a,b[$ überabzählbar\\
 Beweisidee: Cantors Diagonalargument O. E. sei $a = 0, b = 1$, da für $a \leq b$ eine Bijektion $g:[a,b[ \rightarrow [0,1[$ existiert.\\
